Bug 653741 - You should be able to scoll back to the current anchor by focusing the location bar and pressing <enter>. r=bz

--HG--
extra : rebase_source : fde3ce1083868e7d398c626628344bc521224666